# ocaml-sodium

./: sodium.opam
.github/workflows/: dune.yml
config/: discover.ml  dune
lib/: dune
lib_gen/: dune  sodium_bindings.ml  sodium_types.ml
lib_test/: dune
