(library
  (name sodium)
  (public_name sodium)
  (libraries ctypes sodium.storage sodium.generated)
  (c_library_flags (:include ../config/c_library_flags.sexp))
  (modules :standard \ sodium_storage))

(library
  (name sodium_storage)
  (public_name sodium.storage)
  (libraries ctypes)
  (modules sodium_storage))
